hover on mobile fixed

--- a/src/components/button/button.style.scss
+++ b/src/components/button/button.style.scss
@@ -6,15 +6,33 @@
     border: 0px;
     place-items: center;
     
-    &:hover{
-        background-color: rgba($color: #89eeb6, $alpha: 0.3);
+    @media (hover: hover){
+        &:hover{
+            background-color: rgba($color: #89eeb6, $alpha: 0.3);
+        }
+    }
+
+    @media (hover: none){
+        &:active{
+            background-color: rgba($color: #89eeb6, $alpha: 0.3);
+        }
     }
 
     &.specialButton{
         color: lightcoral;
-        &:hover{        
-            background-color: rgba($color: lightcoral, $alpha: 0.4);
+
+        @media (hover: hover){
+            &:hover{        
+                background-color: rgba($color: #f08080, $alpha: 0.4);
+            }
         }
+    
+        @media (hover: none){
+            &:active{        
+                background-color: rgba($color: #f08080, $alpha: 0.4);
+            }
+        }
+        
     }
 }
 
